# NanoRollout

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
brew/: cli.py
brew/api/: __init__.py  models.py
brew/configs/: monitor.yaml
brew/core/: __init__.py  config.py  local.py  models.py  reward.py  runners.py  scheduler.py  server.py
brew/envs/: __init__.py  base.py  docker.py  enroot.py
brew/envs/desktop_env/: desktop_env.py
brew/envs/desktop_env/controllers/: python.py  setup.py
brew/envs/desktop_env/providers/: __init__.py
brew/envs/shell_env/: __init__.py  base.py  docker.py  enroot.py  modal.py
brew/eval/: __init__.py
brew/eval/r2egym/: grading.py
brew/eval/swebench/: grading.py
brew/eval/terminalbench/: grading.py
brew/harness/agents/: __init__.py
brew/harness/agents/osworld/: __init__.py  qwen3vl.py
brew/harness/agents/prompts/: terminal.py
brew/harness/agents/swe/: base.py  codeact.py  codeact_lite.py  miniswe.py
brew/harness/agents/terminal/: __init__.py  miniswe.py  terminus2.py  tmux_adapter.py
brew/harness/runner/: __init__.py  __main__.py  common.py  miniswe.py  oh_core.py  oh_lite.py  r2egym.py
brew/harness/tools/: base.py  bash.py  finish.py
brew/harness/utils/: __init__.py  artifacts.py  single_run.py
brew/runtime/: __init__.py  monitoring.py  server.py
brew/runtime/backends/: ray_scheduler.py
brew/runtime/runners/: __init__.py  base.py  miniswe.py  oh_core.py  oh_lite.py  r2egym.py  registry.py
examples/eval/cocoa/: README.md  run_claude_code_self_hosted.sh  run_cocoabench_modal.sh
examples/eval/swe/: README.md  run_openhands.sh  run_openhands_swe_rebench.sh
examples/eval/terminal/: README.md  run_tb2_terminus2.sh
examples/eval/uda/: README.md  run_uda_bench.sh  run_uda_osworld_v1.sh
examples/server/: README.md  launch_server.sh
harness/: __init__.py
harness/agents/: __init__.py
harness/agents/prompts/: __init__.py
harness/agents/swe/: __init__.py  base.py  codeact.py  codeact_lite.py  miniswe.py
harness/envs/: __init__.py  base.py  modal.py
harness/eval/: __init__.py
harness/eval/swebench/: test_spec.py
harness/runner/: __init__.py  __main__.py  common.py  miniswe.py  oh_core.py  oh_lite.py  r2egym.py
harness/tools/: __init__.py  base.py  bash.py  str_replace_editor.py  task_tracker.py  think.py
harness/utils/: artifacts.py  single_run.py
nanorollout/: cli.py  runner.py
nanorollout/adapters/: __init__.py
nanorollout/adapters/cocoa/: __init__.py  adapter.py  entrypoints.py
nanorollout/adapters/osworld/: __init__.py  adapter.py  entrypoints.py
nanorollout/adapters/swe/: __init__.py  adapter.py  common.py  entrypoints.py
nanorollout/adapters/terminal/: __init__.py  adapter.py  common.py  entrypoints.py
nanorollout/core/: local.py  models.py  runners.py  scheduler.py  server.py
nanorollout/envs/: __init__.py
nanorollout/envs/cocoa_env/: __init__.py  base.py  decrypt.py  docker.py  logger.py  modal.py  tools.py  utils.py
nanorollout/envs/desktop_env/: __init__.py  desktop_env.py
nanorollout/envs/shell_env/: __init__.py  _pool.py  base.py  docker.py  enroot.py  gce.py  modal.py  types.py
nanorollout/envs/uda_env/: __init__.py  base.py  decrypt.py  docker.py  logger.py  modal.py  tools.py  utils.py
nanorollout/eval/: __init__.py
nanorollout/eval/r2egym/: setup.py
nanorollout/eval/swebench/: __init__.py  repo_specs.py  script_gen.py  utils.py
nanorollout/harness/agents/: __init__.py
nanorollout/harness/runner/: __init__.py  __main__.py
tests/core/: test_runners.py  test_swe_rebench.py  test_swe_smith.py  test_swebench_pro.py
tests/server/: test_server.py
(+539 files in other folders)
