[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanorollout"
version = "0.1.0"
description = "Easy agent rollout at scale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "omegaconf>=2.3",
  "ray>=2.49",
  "httpx>=0.25",
  "modal",
  "openai>=2.6.1",
  "anthropic>=0.75.0",
  "google-genai>=0.5.0",
  "requests>=2.32.5",
  "Pillow>=10.0.0",
  "colorama>=0.4.6",
  "agent-sandbox>=0.0.16",
  "playwright>=1.58.0",
  "psutil>=5.9",
  "wandb>=0.17",
  "jinja2",
  "litellm",
  "datasets",
  "docker",
  "unidiff",
  "ghapi>=1.0.10",
  "rich",
  "tenacity>=9.1.4",
]


[project.scripts]
nro = "nanorollout.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["nanorollout*"]
