[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanorollout"
version = "0.1.0"
description = "Easy digital agent rollout at scale"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "nanorollout team" }]
keywords = ["agent", "rollout", "reinforcement learning", "evaluation", "distillation"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "omegaconf>=2.3",
  "ray>=2.49",
  "httpx>=0.25",
  "modal",
  "openai>=2.6.1",
  "anthropic>=0.75.0",
  "google-genai>=0.5.0",
  "requests>=2.32.5",
  "requests-toolbelt",
  "Pillow>=10.0.0",
  "colorama>=0.4.6",
  "agent-sandbox>=0.0.16",
  "playwright>=1.58.0",
  "psutil>=5.9",
  "wandb>=0.17",
  "jinja2",
  "litellm",
  "datasets",
  "swebench @ git+https://github.com/SWE-bench/SWE-bench.git",
  "swesmith @ git+https://github.com/SWE-bench/SWE-smith.git",
  "docker",
  "unidiff",
  "ghapi>=1.0.10",
  "rich",
  "tenacity>=9.1.4",
  "backoff",
  "beautifulsoup4",
  "boto3",
  "borb",
  "cssselect",
  "easyocr",
  "fastdtw",
  "formulas",
  "gymnasium",
  "ImageHash",
  "librosa",
  "lxml",
  "mutagen",
  "numpy",
  "odfpy",
  "openpyxl",
  "opencv-python-headless",
  "pandas",
  "pdfplumber",
  "pyacoustid",
  "PyDrive",
  "pymupdf",
  "pypdf",
  "pypdf2",
  "python-docx",
  "python-dotenv",
  "python-pptx",
  "pytz",
  "rapidfuzz",
  "scikit-image",
  "tldextract",
  "xmltodict",
]


[project.urls]
Homepage = "https://github.com/cocoa-org/NanoRollout"
Repository = "https://github.com/cocoa-org/NanoRollout"
Issues = "https://github.com/cocoa-org/NanoRollout/issues"


[project.scripts]
nro = "nanorollout.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["nanorollout*"]
